--- a/Documentation/ToDo.txt
+++ b/Documentation/ToDo.txt
@@ -1,43 +1,21 @@
 TILES:
 
-- Grass
-- Snow
-- Mountain 
-- Snow-covered mountain
-- Snow-covered forest
-- Forest
-- Sand
+- Water.
+- Mountain.
 
 
 UI:
 
+- Change the top tile to wooden boards.
+- Remove the emblem from the pop-up window.
+- Come up with better embedded icon backgrounds.
+- Add mini-icons for units for inspect purposes ( Both castle window and tile window ). 
 
-GUI:
 
 
 
-Tile UI:
 
-Nothing selected:
-----------------
 
-Kingdom status bar:
----------------------------------------------------------
-| Current Gold ( +Gold Income / turn ) Turn number 	|
---------------------------------------------------------|
-							|
-							|
-							|
-							|
-							|
-							|
-							|
-							|
-							|
-							|
-							|
-							|
----------------------------------------------------------
 
 Tile UI:
 
@@ -67,6 +45,9 @@ UNITS:
 - 
 
 
+
 SHIELD EMBLEM FONT = Blackadder ITC
 SIZE = 183
+
+
 
